2017-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/fits.c (WriteFITSImage): Fix SourceForge issue #490
	"memory leak in WriteFITSImage".

	* coders/palm.c (WritePALMImage): Fix SourceForge issue #489
	"memory leak in WritePALMImage".

	* coders/rgb.c (ReadRGBImage): Fix SourceForge issue #488 "Memory
	leak in rgb.c".

	* coders/palm.c (ReadPALMImage): Fix SourceForge issue #487 "NULL
	pointer dereference in ReadPALMImage".

	* Magick++/lib/Options.cpp (strokeDashArray): Fix SourceForge
	issue #486 "NULL pointer dereference in
	Magick::Options::strokeDashArray".

	* magick/nt_feature.c (NTGetTypeList): Fix SourceForge issue #485
	"NULL pointer dereference in NTGetTypeList".

	* coders/sun.c (ReadSUNImage): Fix SourceForge issue #484 "Memory
	leak in sun.c".

	* coders/tim.c (ReadTIMImage): Fix SourceForge issue #483 "Memory
	leak in tim.c".

	* magick/nt_base.c (NTRegistryKeyLookup): Fix SourceForge issue
	#482 "NULL pointer dereference in NTRegistryKeyLookup".

	* coders/viff.c (ReadVIFFImage): Fix SourceForge issue #481
	"Memory leak in viff.c".

	* magick/profile.c (SetImageProfile): Fix SourceForge issue #480
	"assertion failure in MagickMapAllocateMap".

	* coders/yuv.c (ReadYUVImage): Fix SourceForge issue #478 "Memory
	leak in yuv.c".

	* magick/map.c (MagickMapCloneMap): Fix SourceForge issue #477
	"assertion failure in MagickMapIterateNext".

	* coders/emf.c (ReadEnhMetaFile): Fix SourceForge issue #475 "NULL
	pointer dereference in ReadEnhMetaFile".

	* coders/cineon.c (ReadCINEONImage): Fix SourceForge issue #473
	"NULL pointer dereference in ReadCINEONImage"

	* coders/tiff.c (TIFFIgnoreTags): Fix SourceForge issue #476 "NULL
	Pointer in tiff.c".

2017-09-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (GetConfigureBlob): Fix SourceForge issue #472
	"NULL Pointer in GetConfigureBlob".

2017-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rle.c (ReadRLEImage): Fix SourceForge issue #458 "Heap