@@ -38,6 +38,8 @@
 <p>2017-09-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/gif.c (WriteGIFImage): Fix SourceForge issue #491 &quot;memory
+leak in WriteGIFImage&quot;.</li>
 <li>coders/fits.c (WriteFITSImage): Fix SourceForge issue #490
 &quot;memory leak in WriteFITSImage&quot;.</li>
 <li>coders/palm.c (WritePALMImage): Fix SourceForge issue #489
